Fixed header alignment

--- a/style.css
+++ b/style.css
@@ -44,7 +44,6 @@ ul li {
 #header-container {
   background-color: rgb(0, 0, 0);
   width: 100vw;
-  margin: 0 auto;
   display: flex;
   gap: 45px;
   padding: 20px;
@@ -58,13 +57,7 @@ ul li {
 .logoBox {
   display: flex;
   align-items: center;
-  margin-left: 20px;
-}
-
-.logoBox img {
-  /* border-radius: 30px; */
-  width: 50px;
-
+  /* margin-left: 20px; */
 }
 
 .logoBox a {
@@ -99,22 +92,6 @@ ul li {
   color: white;
   text-decoration: none;
 }
-
-/* RGB text code */
-/* @keyframes gradientText {
-  0% { background-position: 0% 50%; }
-  50% { background-position: 100% 50%; }
-  100% { background-position: 0% 50%; }
-}
-
-.logoname {
-  background: linear-gradient(45deg, #e0c2bb, #eaddc1, #b2e9bc, #33aaff);
-  background-size: 300% 300%;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  animation: gradientText 3s infinite ease-in-out;
-} */
-
 .rightHeader {
   display: flex;
   align-items: center;
@@ -1528,3 +1505,8 @@ details summary:hover {
     display: block;
   }
 }
+/* @media (min-width:1301px){
+  nav{
+    visibility: hidden;
+  }
+} */
